ajout d'un bouton radio

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="style/css/style.css" />  
 
     <!-- Script qui créé automatiquement les cards en fonction des object backend -->
-    <script src="javascript/index-teddy.js" async></script>
+    <script src="javascript/index.js" async></script>
 
     <!-- Nom de l'onglet du site -->
     <title>Orinoco</title>  
@@ -39,10 +39,10 @@
 
     <div class="header-bloc-spacebetween">
 
-        <div class="header-bloc">
+        <a class="header-bloc" href="./index.html">
             <div class="header-icon"><i class="fas fa-shopping-cart"></i></div>
             <div class="header-title">Orinoco</div>
-        </div>
+        </a>
 
         <div class="header-right">
             <div><i class="fas fa-search icon-search display-search"></i></div>
