panier et calcul fonctionnel mais le bouton delete row ne fonctionne pas

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -119,7 +119,7 @@ Fin exemple produit panier
 
         <div class="panier-bloc-right-desc-flex">
             <div class="panier-bloc-right-desc">Sous-Total : </div>
-            <div class="panier-bloc-right-desc">153,00€</div>
+            <div id="SousTotal" class="panier-bloc-right-desc"></div>
         </div>
         <div class="panier-bloc-right-desc-flex">
             <div class="panier-bloc-right-desc">Frais de livraisons : </div>
@@ -130,7 +130,7 @@ Fin exemple produit panier
 
         <div class="panier-bloc-right-flex">
             <div class="panier-bloc-right-color">Total :</div>
-            <div class="panier-bloc-right-price">157,99€</div>
+            <div id="SousTotal2" class="panier-bloc-right-price"></div>
         </div>
 
         <a href="thanks.html" class="panier-bloc-right-add">Paiement</a>
