test du bouton delete 1 only par target

--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -78,11 +78,14 @@
                     </a>
                 </div>
 
-        <div class="panier-bloc-right-head">
+        <div class="panier-bloc-left-head-div">
             <h2 class="panier-bloc-right-title">Panier</h2>
+            <button id="deleteAll" class="deleteAll">Vider le panier</button>
         </div>
 
         <div class="panier-bloc-list">
+
+            <div class="panier-bloc-left-separator3"></div>
 
             <!-- exemple de div produits panier
 
@@ -107,6 +110,7 @@ Fin exemple produit panier
 -->
 
         </div> <!-- Fin liste produits dans le pannier -->
+
 
     </div> <!-- Fin bloc left -->
 
