--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -106,8 +106,8 @@
 
             <div class="panier-bloc-left-separator3"></div>
 
-Fin exemple produit panier
--->
+            Fin exemple produit panier
+                -->
 
         </div> <!-- Fin liste produits dans le pannier -->
 
@@ -139,9 +139,53 @@ Fin exemple produit panier
 
         <a href="thanks.html" class="panier-bloc-right-add">Paiement</a>
 
+    </div>
+
+    <div class="panier-bloc-bottom">
+
+        <h2 class="panier-bloc-right-title">Formulaire de commande</h2>
+        
+        <form id="form-contact">
+
+            <div class="central-bloc-1">
+            <div class="panier-bloc-bottom-column central-bloc">
+                <div class="panier-bloc-bottom-line">
+                    <div class="panier-bloc-bottom-column">
+                        <label for="nom">Nom</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="nom" name="nom" required />
+                    </div>
+                    <div class="panier-bloc-bottom-column">
+                        <label for="prenom">Prenom</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="prenom" name="prenom" required />
+                    </div>
+                </div>
+                <div class="panier-bloc-bottom-line">
+                    <div class="panier-bloc-bottom-column">
+                        <label for="adresse">Adresse</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="adresse" name="adresse" required />  
+                    </div>
+                    <div class="panier-bloc-bottom-column">
+                        <label for="ville">Ville</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="ville" name="ville" required />
+                    </div>
+                </div>
+                <div class="panier-bloc-bottom-line">
+                    <div class="panier-bloc-bottom-column">
+                        <label for="email">E-mail</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="email" name="email" required />
+                    </div>
+                </div>    
+            </div>
+        </div>
+            <button class="panier-bloc-bottom-add">Commander</button>
+
+        </form>
+
 
 
     </div>
+
+
 
 </div> <!-- fin product page bloc -->
 
