--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -46,8 +46,10 @@
             </a>
     
             <div class="header-right">
+                <!--
                 <div><i class="fas fa-search icon-search display-search"></i></div>
                 <input type="search" placeholder="Rechercher" class="espacesaisie display-search"/> 
+                -->
                 <div class="header-shop">
                     <a href="#rechercheproduits"><i class="fas fa-shopping-bag"></i></a>
                 </div>
@@ -151,34 +153,33 @@
             <div class="panier-bloc-bottom-column central-bloc">
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
-                        <label for="nom">Nom</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="nom" name="nom" required />
+                        <label for="nom">Prenom</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="firstName" name="firstName" />
                     </div>
                     <div class="panier-bloc-bottom-column">
-                        <label for="prenom">Prenom</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="prenom" name="prenom" required />
+                        <label for="prenom">Nom</label>
+                        <input class="panier-bloc-bottom-input" type="text" id="lastName" name="lastName" />
                     </div>
                 </div>
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
                         <label for="adresse">Adresse</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="adresse" name="adresse" required />  
+                        <input class="panier-bloc-bottom-input" type="text" id="adress" name="adress" />  
                     </div>
                     <div class="panier-bloc-bottom-column">
                         <label for="ville">Ville</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="ville" name="ville" required />
+                        <input class="panier-bloc-bottom-input" type="text" id="city" name="city" />
                     </div>
                 </div>
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
                         <label for="email">E-mail</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="email" name="email" required />
+                        <input class="panier-bloc-bottom-input" type="text" id="email" name="email" />
                     </div>
                 </div>    
             </div>
         </div>
-            <button class="panier-bloc-bottom-add">Commander</button>
-
+        <input type="submit" id="CommandButton" class="panier-bloc-bottom-add"/>
         </form>
 
 
