--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,6 +50,7 @@
                 <input type="search" placeholder="Rechercher" class="espacesaisie display-search"/> 
                 -->             
                 <div class="header-shop">
+                    <div class="numbersize" id="QuantityNumber" ></div>
                 <a href="panier.html"><i class="fas fa-shopping-bag"></i></a>
             </div>
         </div>
