--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -51,6 +51,7 @@
                 <input type="search" placeholder="Rechercher" class="espacesaisie display-search"/> 
                 -->
                 <div class="header-shop">
+                    <div class="numbersize" id="QuantityNumber" ></div>
                     <a href="#rechercheproduits"><i class="fas fa-shopping-bag"></i></a>
                 </div>
             </div>
