--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -154,21 +154,21 @@
             <div class="panier-bloc-bottom-column central-bloc">
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
-                        <label for="nom">Prenom</label>
+                        <label for="firstName">Prenom</label>
                         <input class="panier-bloc-bottom-input" type="text" id="firstName" name="firstName" />
                     </div>
                     <div class="panier-bloc-bottom-column">
-                        <label for="prenom">Nom</label>
+                        <label for="lastName">Nom</label>
                         <input class="panier-bloc-bottom-input" type="text" id="lastName" name="lastName" />
                     </div>
                 </div>
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
-                        <label for="adresse">Adresse</label>
+                        <label for="adress">Adresse</label>
                         <input class="panier-bloc-bottom-input" type="text" id="adress" name="adress" />  
                     </div>
                     <div class="panier-bloc-bottom-column">
-                        <label for="ville">Ville</label>
+                        <label for="city">Ville</label>
                         <input class="panier-bloc-bottom-input" type="text" id="city" name="city" />
                     </div>
                 </div>
