--- a/frontend/panier.html
+++ b/frontend/panier.html
@@ -155,32 +155,35 @@
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
                         <label for="firstName">Prenom</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="firstName" name="firstName" />
+                        <input class="panier-bloc-bottom-input" type="text" id="firstName" name="firstName" required />
                     </div>
                     <div class="panier-bloc-bottom-column">
                         <label for="lastName">Nom</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="lastName" name="lastName" />
+                        <input class="panier-bloc-bottom-input" type="text" id="lastName" name="lastName" required />
                     </div>
                 </div>
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
                         <label for="address">Adresse</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="address" name="address" />  
+                        <input class="panier-bloc-bottom-input" type="text" id="address" name="address" required />  
                     </div>
                     <div class="panier-bloc-bottom-column">
                         <label for="city">Ville</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="city" name="city" />
+                        <input class="panier-bloc-bottom-input" type="text" id="city" name="city" required />
                     </div>
                 </div>
                 <div class="panier-bloc-bottom-line">
                     <div class="panier-bloc-bottom-column">
                         <label for="email">E-mail</label>
-                        <input class="panier-bloc-bottom-input" type="text" id="email" name="email" />
+                        <input class="panier-bloc-bottom-input" type="email" id="email" name="email" required />
                     </div>
                 </div>    
             </div>
         </div>
-        <input type="submit" id="CommandButton" class="panier-bloc-bottom-add"/>
+        <button href="thanks.html" type="submit" id="CommandButton" class="panier-bloc-bottom-add">Commander</button>
+        <div id="CommandMessage1" class="CommandMessage">Commande confirmé !</div>
+        <div id="CommandMessage2" class="CommandMessage">Numéro de vôtre commande :</div>
+        <div id="CommandMessage3" class="CommandMessage">79ef1bd0-0f26-11ec-8a6e-e3ed235e078a</div>
         </form>
 
 
