--- a/frontend/thanks.html
+++ b/frontend/thanks.html
@@ -78,10 +78,10 @@
     </div>
 
 <div class="thanks-icon"><i class="far fa-check-circle"></i></div>
-<div class="thanks-title">Merci, à bientot !</div>
+<div class="thanks-title">Merci à bientot !</div>
 
 <div class="thanks-command">
-    <div id="CommandText1" >Numéro de vôtre commande</div>
+    <div id="CommandText1" >Numéro de commande :</div>
     <div id="OderIdNumber">79ef1bd0-0f26-11ec-8a6e-e3ed235e078a</div>
 </div>
 
